fix weird spacing problems..............

--- a/frontend/client/src/home/home.css
+++ b/frontend/client/src/home/home.css
@@ -15,7 +15,7 @@
 }
 
 .main-toolbar.ngloaded {
-    display: block;
+    display: flex;
 }
 
 .main-toolbar.ngloaded.hidden {
@@ -50,15 +50,16 @@
     padding-right: 16px;
 }
 .main-toolbar {
-    display: block;
-    position: absolute;
+    display: flex;
+    /*position: absolute;*/
     z-index: 18;
 }
 
 .ui-view-wrapper {
-    padding-top: 56px;
+    padding-top: 0px; /*56px*/
     -webkit-overflow-scrolling: touch;
     overflow: auto;
+    display:flex;
 }
 
 body, html {
